--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <h2>*Exercícios feitos durante o trimestre</h2>
 
         <ul>
-            <a href="#####"><li>Exercício 1 - "Nome do Exercício"</li></a>
+            <a href="exercício/exercício1.html"><li>Exercício 1 - "Nome do Exercício"</li></a>
             <a href="#####"><li>Exercício 2 - "Nome do Exercício"</li></a>      
             <a href="#####"><li>Exercício 3 - "Nome do Exercício"</li></a>
         </ul> 
     </main>
     <footer>
-
+        <img src="nigga.jpg">
+        <p class="copyright">&#169;Copyright Caue.Ribs - 2025</p>
     </footer>
     
 </body>
