--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio do Cauê</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>portifolio</title>
 </head>
 <body>
-    <header>
-        <h1>Programação Front-End - (Turma: 2ºDS-B) <br>- Portiólio de: Cauê Ribeiro - 2ºTrimestre</h1>
-    </header>
-    <main>
-        <h2>*Exercícios feitos durante o trimestre</h2>
-
-        <ul>
-            <a href="exercício/exercício1.html"><li>Exercício 1 - "Nome do Exercício"</li></a>
-            <a href="#####"><li>Exercício 2 - "Nome do Exercício"</li></a>      
-            <a href="#####"><li>Exercício 3 - "Nome do Exercício"</li></a>
-        </ul> 
-    </main>
-    <footer>
-        <img src="nigga.jpg">
-        <p class="copyright">&#169;Copyright Caue.Ribs - 2025</p>
-    </footer>
+    <h1>portifolio</h1>
+    <ul>
+        <li><a href="exercicio1/exercicio1.html">exercicio1</a></li>
+        <li><a href="exercicio2/exercicio2.html">exercicio2</a></li>
+        <li><a href="exercicio3/exercicio3.html">exercicio3</a></li>
+        <li><a href="exercicio4/exercicio4.html">exercicio4</a></li>
+    </ul>
     
 </body>
 </html>
