--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="exercicio2/exercicio2.html">exercicio2</a></li>
         <li><a href="exercicio3/exercicio3.html">exercicio3</a></li>
         <li><a href="exercicio4/exercicio4.html">exercicio4</a></li>
+        <li><a href="exercicio5/exercicio5.html">exercicio5</a></li>
     </ul>
     
 </body>
